Fixed printing on Safari and iOS Safari

--- a/src/app/components/printable-spell-list-generator/printable-spell-list-generator.component.scss
+++ b/src/app/components/printable-spell-list-generator/printable-spell-list-generator.component.scss
@@ -47,6 +47,10 @@ section#container {
     // *:not(app-printable-spell-list-generator) {
     //   display: none !important;
     // }
+    @page {
+      size: letter;
+      margin: 0.5in;
+    }
     app-toolbar,
     app-footer {
       display: none !important;
@@ -62,15 +66,26 @@ section#container {
         background-color: transparent;
       }
     }
+    html,
+    body {
+      width: 8.5in;
+      margin: 0;
+      padding: 0;
+      max-width: 100vw;
+    }
   }
 
-  @page {
-    size: letter;
-    margin: 0.5in;
+  #container {
+    display: block !important;
+    margin: 0;
+    padding: 0;
   }
 
   #cards {
     display: block !important;
+    width: 8in !important;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
   }
 
   #filters,
@@ -79,8 +94,10 @@ section#container {
   }
   .card {
     cursor: default;
+    display: block !important;
     margin-bottom: 1rem;
-    width: 100%;
+    width: 8in !important;
+    max-width: 100vw !important;
     &.selected {
       &::after {
         display: none;
