--- a/src/app/components/printable-spell-list-generator/spell-card/spell-card.component.scss
+++ b/src/app/components/printable-spell-list-generator/spell-card/spell-card.component.scss
@@ -37,14 +37,26 @@ ul {
       line-height: normal !important;
     }
   }
+  div#spell-card {
+    width: 8in !important;
+    padding-left: 0.2in !important;
+    padding-right: 0.2in !important;
+  }
+  div#spell-card-contents {
+    width: 8in;
+  }
   #spell-card-column-1 {
-    width: 17vw;
+    width: 1.5in;
   }
   #spell-card-column-2 {
-    width: 20vw;
+    width: 1.5in;
   }
   #spell-card-column-3 {
-    width: 58vw;
+    width: 5.5in;
+  }
+  #spell-text {
+    max-width: 5in !important;
+    padding: 0 0.4in !important;
   }
 }
 
